Implement request tokenizer and client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
-name = "mini-kv"
+name = "minikv"
 version = "0.1.0"
 authors = ["Shoyo Inokuchi <shoyoinokuchi@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "minikv"
+path = "src/lib.rs"
+
+[[bin]]
+name = "minikv-server"
+path = "src/bin.rs"
 
 [dependencies]
