Rename internal impl to name-agnostic, external impl to Kiva

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "minikv"
+name = "kiva"
 version = "0.1.0"
 authors = ["Shoyo Inokuchi <shoyoinokuchi@gmail.com>"]
 edition = "2018"
 
 [lib]
-name = "minikv"
+name = "kiva"
 path = "src/lib.rs"
 
 [[bin]]
-name = "minikv-server"
+name = "kiva-server"
 path = "src/bin.rs"
 
 [dependencies]
