--- a/kiba.conf
+++ b/kiba.conf
@@ -2,7 +2,7 @@
 #
 # This file specifies parameters for a given server instance.
 # To enable this configuration file, pass in the path to this file as a
-# command-line argument .
+# command-line argument.
 #
 # Example:
 # % ./kiba /path/to/kiba.conf
@@ -13,15 +13,19 @@
 # bind 127.0.0.1.6464
 bind 127.0.0.1:6464
 
+# Specify the number of messages that the queue for the executor thread
+# can hold.
+cbound 128
+
 # Specify the hashing algorithm for underlying hashmaps
 #
 # WARNING: Changing this setting is NOT recommended. This can expose
 # your server to attacks such as HashDoS.
 #
-# If denial-of-service attacks are not a concern and you prefer
-# a speedup for smaller hash keys (~16 bytes or less) and slight
-# slowdown for larger hash keys (~32 bytes or more), this setting
-# allows you to specify the Fowler-Noll-Vo (FNV) hashing algorithm.
+# If denial-of-service attacks are not a concern and you prefer a
+# speedup for smaller hash keys (~16 bytes or less) and slight slowdown
+# for larger hash keys (~32 bytes or more), this setting allows you to
+# specify the Fowler-Noll-Vo (FNV) hashing algorithm.
 #
 # Options:
 # hasher default
