Add further comments for hasher conf

--- a/kiba.conf
+++ b/kiba.conf
@@ -22,6 +22,11 @@ cbound 128
 # WARNING: Changing this setting is NOT recommended. This can expose
 # your server to attacks such as HashDoS.
 #
+# The default hashing algorithm is SipHash 1-3.
+# It protects against denial-of-service caused by maliciously crafted
+# inputs, and offers competitive performance for medium-sized keys and
+# acceptable performance across the board.
+#
 # If denial-of-service attacks are not a concern and you prefer a
 # speedup for smaller hash keys (~16 bytes or less) and slight slowdown
 # for larger hash keys (~32 bytes or more), this setting allows you to
